# gobject-tutorial

./: .gitignore  01-gobject.c  02-refcount.c  03-type-decl-verbose.c  04-type-decl-macro.c  05-type-decl-final.c  README.md  build.sh  meson.build
06-type-decl-separate-files/: .gitignore  build.sh  main.c  meson.build  tdouble.c  tdouble.h
07-signals/: main.c  meson.build  tdouble.c  tdouble.h
08-properties/: main.c  meson.build  tdouble.c
09-abstract-type/: main.c  meson.build  tdouble.c  tdouble.h  tint.c  tint.h  tnumber.h
10-tstr-and-tstrnum/: main.c  meson.build  tnumstr.c  tnumstr.h  tstr.c
11-interface/: main.c  meson.build  tcomparable.c  tcomparable.h  tdouble.c  tint.c  tnumber.c  tstr.c  tstr.h
