project('gobject-tutorial', 'c')

gobject = dependency('gobject-2.0')

executable('01-gobject', '01-gobject.c', dependencies: gobject)
executable('02-refcount', '02-refcount.c', dependencies: gobject)
executable('03-type-decl-verbose', '03-type-decl-verbose.c', dependencies: gobject)
executable('04-type-decl-macro', '04-type-decl-macro.c', dependencies: gobject)
executable('05-type-decl-final', '05-type-decl-final.c', dependencies: gobject)
